--- a/kankan/pages/setting/setting.html
+++ b/kankan/pages/setting/setting.html
@@ -46,113 +46,144 @@
 			<!--页面主内容区开始-->
 			<div class="mui-page-content">
 				<div class="mui-scroll-wrapper">
-					<div class="set-page">
-						<div class="set-title">
-							ポイント
-						</div>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								ポイント購入
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<div class="set-title">
-							その他
-						</div>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								招待コードを確認
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								チケット購入
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								利用規約
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								プライバシーポリシー
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								禁止物・禁止行為
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								お問い合わせ
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								会社概要
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								ログアウト
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
-						<ul class="set-item">
-							<li class="set-item-col1">
-								バージョン
-							</li>
-							<li class="set-item-col2">
-								<a href="#">
-									<span class="mui-icon mui-navigate-right"></span>
-								</a>
-							</li>
-						</ul>
+					<h5>ポイント</h4>
+					<ul class="mui-table-view">
+				        <li class="mui-table-view-cell pointbuy">
+				            <a class="mui-navigate-right">
+				               ポイント購入
+				            </a>
+				        </li>
+				    </ul>
+				    <h5>その他</h4>
+					<ul class="mui-table-view">
+				        <li class="mui-table-view-cell tickbuy">
+				            <a class="mui-navigate-right">
+				               チケット購入
+				            </a>
+				        </li>
+				         <li class="mui-table-view-cell">
+				            <a class="mui-navigate-right" href="#Utilization">
+				               利用規約
+				            </a>
+				        </li>
+				        <li class="mui-table-view-cell">
+				            <a class="mui-navigate-right" href="#Privacy">
+				               プライバシーポリシー
+				            </a>
+				        </li>
+				        <li class="mui-table-view-cell">
+				            <a class="mui-navigate-right" href="#forbidon">
+				               禁止物・禁止行為
+				            </a>
+				        </li>
+				        <li class="mui-table-view-cell Contact">
+				            <a class="mui-navigate-right" >
+				              お問い合わせ
+				            </a>
+				        </li>
+				        <li class="mui-table-view-cell">
+				            <a class="mui-navigate-right" href="#Summary">
+				              会社概要
+				            </a>
+				        </li>
+				        <li class="mui-table-view-cell">
+				            <a class="mui-navigate-right" href="#">
+				             ログアウト
+				            </a>
+				        </li>
+				        <li class="mui-table-view-cell">
+				            <a class="mui-navigate-right" href="#">
+				            バージョン
+				            </a>
+				        </li>
+				    </ul>
+				</div>
+			</div>
+		</div>
+		<!--child page 利用規約---->
+		<div id="Utilization" class="mui-page">
+			<div class="mui-navbar-inner mui-bar mui-bar-nav">
+				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
+					<span class="mui-icon mui-icon-left-nav"></span>
+				</button>
+				<h1 class="mui-center mui-title lang" data-locale="">利用规约</h1>
+			</div>
+			<div class="mui-page-content">
+				<div class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<ul class="mui-table-view">
+						        <li class="mui-table-view-cell">
+						            <a class="mui-navigate-right">
+						                liyong
+						            </a>
+						        </li>
+						    </ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--child page   プライバシーポリシー---->
+		<div id="Privacy" class="mui-page">
+			<div class="mui-navbar-inner mui-bar mui-bar-nav">
+				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
+					<span class="mui-icon mui-icon-left-nav"></span>
+				</button>
+				<h1 class="mui-center mui-title lang" data-locale="">プライバシーポリシー</h1>
+			</div>
+			<div class="mui-page-content">
+				<div class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<ul class="mui-table-view">
+						        <li class="mui-table-view-cell">
+						            <a class="mui-navigate-right">
+						                  プライバシーポリシー
+						            </a>
+						        </li>
+						    </ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--child page    禁止物・禁止行為---->
+		<div id="forbidon" class="mui-page">
+			<div class="mui-navbar-inner mui-bar mui-bar-nav">
+				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
+					<span class="mui-icon mui-icon-left-nav"></span>
+				</button>
+				<h1 class="mui-center mui-title lang" data-locale="">禁止物・禁止行為</h1>
+			</div>
+			<div class="mui-page-content">
+				<div class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<ul class="mui-table-view">
+						        <li class="mui-table-view-cell">
+						            <a class="mui-navigate-right">
+						                禁止物・禁止行為
+						            </a>
+						        </li>
+						    </ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--child page 会社概要---->
+		<div id="Summary" class="mui-page">
+			<div class="mui-navbar-inner mui-bar mui-bar-nav">
+				<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
+					<span class="mui-icon mui-icon-left-nav"></span>
+				</button>
+				<h1 class="mui-center mui-title lang" data-locale="">会社概要</h1>
+			</div>
+			<div class="mui-page-content">
+				<div class="mui-scroll-wrapper">
+					<div class="mui-scroll">
+						<ul class="mui-table-view">
+						        <li class="mui-table-view-cell">
+						            <a class="mui-navigate-right">
+						                 会社概要
+						            </a>
+						        </li>
+						    </ul>
 					</div>
 				</div>
 			</div>
@@ -163,37 +194,46 @@
 	<script src='../../js/feedback.js'></script>
 	<script>
 		mui.init();
-		//初始化单页view
 		var viewApi = mui('#app').view({
 			defaultPage: '#setting'
 		});
-		//初始化单页的区域滚动
 		mui('.mui-scroll-wrapper').scroll();
 		var view = viewApi.view;
 		(function($) {
-			//处理view的后退与webview后退
 			var oldBack = $.back;
 			$.back = function() {
-				if(viewApi.canBack()) { //如果view可以后退，则执行view的后退
+				if(viewApi.canBack()) { 
 					viewApi.back();
-				} else { //执行webview后退
+				} else { 
 					oldBack();
 				}
 			};
-			//监听页面切换事件方案1,通过view元素监听所有页面切换事件，目前提供pageBeforeShow|pageShow|pageBeforeBack|pageBack四种事件(before事件为动画开始前触发)
-			//第一个参数为事件名称，第二个参数为事件回调，其中e.detail.page为当前页面的html对象
 			view.addEventListener('pageBeforeShow', function(e) {
-				//				console.log(e.detail.page.id + ' beforeShow');
 			});
 			view.addEventListener('pageShow', function(e) {
-				//				console.log(e.detail.page.id + ' show');
 			});
 			view.addEventListener('pageBeforeBack', function(e) {
-				//				console.log(e.detail.page.id + ' beforeBack');
 			});
 			view.addEventListener('pageBack', function(e) {
-				//				console.log(e.detail.page.id + ' back');
 			});
 		})(mui);
+		mui('.tickbuy').on('tap','a',function(e) {
+			mui.openWindow({
+				id: 'point_to_ticket',
+				url:"point_to_ticket.html"
+			});
+		});
+		mui('.Contact').on('tap','a',function(e) {
+			mui.openWindow({
+				id: 'question',
+				url:"question.html"
+			});
+		});
+		mui('.pointbuy').on('tap','a',function(e) {
+			mui.openWindow({
+				id: 'point_buy',
+				url:"point_buy.html"
+			});
+		});
 	</script>
 </html>
