--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -28,7 +28,7 @@
 			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
 			<h1 class="mui-title lang" data-locale="requesttitle"></h1>
 			<div id="history">
-				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right"><span style="font-size: 14px;">交易履历</span></a>
+				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;">交易履历</span></a>
 			</div>
 		</header>
 		<div class="mui-content">
@@ -206,22 +206,13 @@
 						Log.d(data);
 						//emptycontent();
 						if(data=="2001"){
-							alert(TextMessage.datanull);
-							//$("ul").hide();
+							mui.toast(TextMessage.datanull, {
+								duration: 'long',
+								type: 'div'
+							})
 						}
 						if(data=="1000"){
-							alert(TextMessage.test);
-							mui.openWindow({
-								id: 'login',
-								url:"../../login/login.html"
-							});
-						}
-						if(data=="2002"){
-							alert(TextMessage.userng);
-							mui.openWindow({
-								id: 'login',
-								url:"../../login/login.html"
-							});
+							$(".jiaoyihitext").hide();
 						}
 					}
 				});
