交易页面实装（聊天功能）

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -608,7 +608,7 @@
 						//alert(trans_id);
 						mui.openWindow({
 							url:"../../transaction/transaction2.html?transid=" + trans_id,
-							id:"../../transaction/transaction2.html",
+							id:"transaction",
 							extras:{
 								"transid":trans_id
 							}
