--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -61,7 +61,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
@@ -69,13 +68,13 @@
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
 		<script>
-			mui.init({
+			mui.init(/*{
 				swipeBack: false,
 				preloadPages: [{
 						id:"translatelist",
-						url:"translatelist.html"
+						url:"../../transaction/transaction2.html"
 				}]
-			});
+			}*/);
 			function showcommodity(results){
 				var data=results.data;
 				//sell commodity
@@ -173,15 +172,12 @@
 						var translatepage=null;
 						mui('.translate').on('tap','a',function(e) {
 							var tid = this.getAttribute('id');
-							//var rid="10";
-							if(!translatepage) {
-								translatepage = plus.webview.getWebviewById('translatelist');
-							}
-							mui.fire(translatepage, 'traid', {
-								id: tid
-							});
 							mui.openWindow({
-								id: 'translatelist'
+								url:"../../transaction/transaction2.html?transid=" + tid,
+								id:"transaction",
+								extras:{
+									"transid":tid
+								}
 							});
 						});
 					}
