--- a/kankan/pages/setting/question.html
+++ b/kankan/pages/setting/question.html
@@ -133,10 +133,10 @@
 			function clearallval(){
 				$("#full_name").val("");
 				$("#contents").val("");
-				$("#0").val("");
-				$("#1").val("");
-				$("#2").val("");
-				$("#3").val("");
+				$("#0").val("0");
+				$("#1").val("0");
+				$("#2").val("0");
+				$("#3").val("0");
 				$(".z_images").remove();
 				//location.reload();
 			}
